--- a/index.html
+++ b/index.html
@@ -32,14 +32,56 @@
                     <li class="nav-item"> <a class= "nav-link" href="aboutus.html"> About</a> </li>
                     <li class="nav-item"> <a class= "nav-link" href="#"> Menu</a> </li>
                     <li class="nav-item"> <a class= "nav-link" href="contactus.html"> Contact</a> </li>                 
-
                 </ul>
+
+                <span class="navbar-text">
+                    <a href="" data-toggle="modal" data-target = "#loginModel">
+                        <span class="fa fa-sign-in"></span> Login
+                    </a>
+                </span>
 
             </div>
         </div>
     </nav>
 
+    <div id="loginModel" class="modal fade" role= "dialog">
+            <div class="modal-dialog modal-lg" role ="content">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title">Login</h4>
+                        <button type="button" class="close" data-dismiss="modal"> &times;</button>
+                    </div>
 
+                    <div class="modal-body">
+                         <form>
+                        <div class="form-row">
+                            <div class="form-group col-sm-4">
+                                    <label class="sr-only" for="exampleInputEmail3">Email address</label>
+                                    <input type="email" class="form-control form-control-sm mr-1" id="exampleInputEmail3" placeholder="Enter email">
+                            </div>
+                            <div class="form-group col-sm-4">
+                                <label class="sr-only" for="exampleInputPassword3">Password</label>
+                                <input type="password" class="form-control form-control-sm mr-1" id="exampleInputPassword3" placeholder="Password">
+                            </div>
+                            <div class="col-sm-auto">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox">
+                                    <label class="form-check-label"> Remember me
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
+                            <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>        
+                        </div>
+                    </form>
+                    </div>
+                </div>
+            </div>
+
+    </div>
+  
     <header class = "jumbotron">
         <div class = "container">
             <div class="row row-header">
@@ -51,8 +93,12 @@
                     <img src="img/logo.png" class="  img-fluid">
                 </div>
                 
-                <a href="#cardReserve" class="mt-3 text-center ml-sm-3 col-sm-2 btn btn-warning align-self-center">Reserve a Table</a>
-            
+                <div class="col-12 col-sm-3 align-self-center">
+                    <a href="#cardReserve" class="mt-3 text-center ml-sm-3 btn btn-warning "
+                            data-toogle= "tooltip" data-html="true" title="Or Call Us at: <br> <strong>+55829913232</strong>"
+                            data-placement = "bottom" 
+                    >Reserve a Table</a>
+                </div>
 
             </div>
         </div>
@@ -219,6 +265,11 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script>
+        $(document).ready(function(){
+            $('[data-toogle="tooltip"]').tooltip();
+        });
+    </script>
 
 </body>
 
